# bess

./: .cursorrules  .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
data/processed/: mastr_bess_stats.parquet
data/sample/: generation_sample.csv  load_sample.csv  prices_sample.csv
src/dashboard/: app.py  theme.py
src/dashboard/pages/: 01_Mission.py  02_Data.py  03_Simulator.py  04_VNB_Matrix.py
src/open_autobidder/: __init__.py  chat.py  config.py  data_ingestion.py  data_loader.py  init.py  mastr.py  optimizer.py
src/open_autobidder/models/: megapack.py
src/open_autobidder_de.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_ingestion.py  test_data_loader.py  test_optimizer.py
web/: jest.config.cjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/about/: page.tsx
web/app/data/: page.tsx
web/app/daten/: page.tsx
web/app/german-market/: page.tsx
web/app/herausforderungen/: page.tsx
web/app/mission/: page.tsx
web/app/netzregulierung/: page.tsx
web/app/news/: page.tsx
web/app/resources/: page.tsx
web/app/revenue-stacking/: page.tsx
web/app/simulator/: page.tsx
web/app/tagesupdate/: page.tsx
web/app/wirtschaftlichkeit/: page.tsx
web/components/: chat-events.ts  chat-widget.tsx  daily-briefing-view.tsx  data-live-metrics-view.tsx  fade-in.tsx  home-ai-chat.tsx  insight-visuals.tsx  news-feed-view.tsx  site-footer.tsx  site-header.tsx  text-selection-explainer.tsx
(+18 files in other folders)
